remove ftable and fkey from a field, add props as TextProps and add BoolProps to a Field, improve unit test, update examples templates

--- a/pkg/examples/user-role.yml
+++ b/pkg/examples/user-role.yml
@@ -10,14 +10,12 @@ fields:
     - name: user_id
       type: int
       required: true
-      ftable: user
-      fkey: id
+      props: {ftable: user, fkey: id }
       comment: ref to user
     - name: role_id
       type: int
       required: true
-      ftable: role
-      fkey: id
+      props: { ftable: role, fkey: id }
       unique: true
       comment: ref to role 
     - name: created_at
